--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Document</title>
   </head>
   <body class="m-0 p-0 flex">
-      <div class="bg-black text-white w-6/12 h-[100vh]">
+      <div class="bg-black text-white w-6/12 h-[100vh] overflow-hidden">
         <div class="text-section m-10">
           <h1 class="text-slate-600 text-5xl font-bold">
             Post Office Application
@@ -35,5 +35,6 @@
         <p class="text-gray-300">Your Current IP Address id <span class="text-white font-semibold">127.0.0.1</span></p>
         <button class="text-gray-100 rounded-md border-2 border-gray-00 font-normal mt-5 w-9/12 py-3">Get Started</button>
       </div>
+      <script src="script.js"></script>
   </body>
 </html>
