working first page

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
       </div>
       <div class="bg-slate-500  w-6/12 flex flex-col justify-center items-center text-2xl font-extrabold">
-        <p class="text-gray-300">Your Current IP Address id <span class="text-white font-semibold">127.0.0.1</span></p>
-        <button class="text-gray-100 rounded-md border-2 border-gray-00 font-normal mt-5 w-9/12 py-3">Get Started</button>
+        <p class="text-gray-300">Your Current IP Address id <span class="text-white font-semibold" id="ipAddress"></span></p>
+        <button class="text-gray-100 rounded-md border-2 border-gray-00 font-normal mt-5 w-9/12 py-3" id="getStarted">Get Started</button>
       </div>
       <script src="script.js"></script>
   </body>
