--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             Post Offices, based on your location.
           </p>
         </div>
-        <div class="image-container mt-20 h-[50vh]">
-          <img src="undraw_messenger_re_8bky.svg" class="image h-60"/>
+        <div class="image-container mt-36 ">
+          <img src="undraw_messenger_re_8bky.svg" class="image h-[80%]"/>
         </div>
       </div>
       <div class="bg-slate-500  w-6/12 flex flex-col justify-center items-center text-2xl font-extrabold">
